src/test/resources/plang-strict/passing/io/005_output_array.plang
**#Should be able to output arrays to the stdOut
**stdOut:1 2 3 4
program out
  változók:
    a: egész[4]

  a[0] := 1
  a[1] := 2
  a[2] := 3
  a[3] := 4

  ki: a
program_vége
