src/test/resources/plang-strict/parse-error/017_no_slice_for_arrays.plang
**#arrays cannot be sliced
**FirstErrorLoc:7,8
program t
  Változók:
    x: egész[4],
    y: egész[2]
  y := x[1:3]
program_vége
